--- a/README
+++ b/README
@@ -29,4 +29,4 @@ This repository contains several modules that together form a chess reinforcemen
 1. Clone the repository:
 
    ```bash
-   git clone [repository-url]
+   git clone <https://github.com/KartikDogra02/Disseration.git>
